<resources>
    <string name="app_name">Food Ordering App</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_quality_meals_at_home">Enjoy Restaurant Quality Meals at Home</string>
    <string name="nvh_of_food">NVH Of Food</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue with</string>
    <string name="google">Google</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="home_bottom_navigation">Home</string>
    <string name="cart_bottom_navigation">Cart</string>
    <string name="search_bottom_navigation">Search</string>
    <string name="history_bottom_navigation">History</string>
    <string name="profile_bottom_navigation">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
</resources>